# bad-lambda-capture-plugin

./: CMakeLists.txt  README.md  check-all.py
doc/: LambdaChecker.md  SyntaxChecker.md
src/: CMakeLists.txt  actions.hpp  config.hpp.in  driver.cpp  plugin.cpp
src/capture/: CMakeLists.txt  actions.hpp  driver.cpp  plugin.cpp
src/syntax/: CMakeLists.txt  clang_common.hpp  consumer.hpp  driver.cpp  field_visitor.cpp  field_visitor.hpp  plugin.cpp  recorddecl_visitor.cpp  recorddecl_visitor.hpp
test/: capture.cpp  hiop.cpp  syntax.cpp
